--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -30,12 +30,6 @@
   }
 }
 
-@media (min-width: $desktop-width) {
-  .advantages {
-    margin-bottom: -30px;
-  }
-}
-
 .advantages__title {
   margin: 0 0 28px;
   font-weight: 400;
@@ -46,7 +40,7 @@
 
 @media (min-width: $tablet-width) {
   .advantages__title {
-    margin: 0 0 6px;
+    margin: 0 0 70px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -68,12 +62,6 @@
   }
 }
 
-@media (min-width: $desktop-width) {
-  .advantages__list {
-    flex-wrap: nowrap;
-  }
-}
-
 .advantages__item {
   align-items: center;
   color: $content-color;
@@ -90,8 +78,7 @@
   .advantages__item {
     font-size: 16px;
     line-height: 24px;
-    margin-top: 65px;
-    margin-bottom: 65px;
+    margin: 0 0 97px;
     padding: 114px 75px 0 0;
     width: 250px;
   }
@@ -100,10 +87,8 @@
 @media (min-width: $desktop-width) {
   .advantages__item {
     margin-bottom: 20px;
+    padding: 40px 0 50px;
     width: 245px;
-    box-sizing: border-box;
-    margin-left: 0px;
-    padding: 110px 0;
   }
 }
 
@@ -147,59 +132,45 @@
 }
 
 .advantages__item--leaf::before {
-  background-image: url(../img/advantage-leaf@1x.png);
+  background-image: url("../img/advantage-leaf@1x.png");
 }
 
-@media (min-resolution: $retina-dpi),
-(min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .advantages__item--leaf::before {
-    background-image: url(../img/advantage-leaf@2x.png);
+    background-image: url("../img/advantage-leaf@2x.png");
     background-size: 60px auto;
   }
 }
 
 .advantages__item--powder::before {
-  background-image: url(../img/advantage-powder@1x.png);
+  background-image: url("../img/advantage-powder@1x.png");
 }
 
-@media (min-resolution: $retina-dpi),
-(min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .advantages__item--powder::before {
-    background-image: url(../img/advantage-powder@2x.png);
+    background-image: url("../img/advantage-powder@2x.png");
     background-size: 60px auto;
   }
 }
 
 .advantages__item--dining::before {
-  background-image: url(../img/advantage-dining@1x.png);
+  background-image: url("../img/advantage-dining@1x.png");
 }
 
-@media (min-resolution: $retina-dpi),
-(min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .advantages__item--dining::before {
-    background-image: url(../img/advantage-dining@2x.png);
+    background-image: url("../img/advantage-dining@2x.png");
     background-size: 60px auto;
   }
 }
 
 .advantages__item--clock::before {
-  background-image: url(../img/advantage-clock@1x.png);
+  background-image: url("../img/advantage-clock@1x.png");
 }
 
-@media (min-resolution: $retina-dpi),
-(min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .advantages__item--clock::before {
-    background-image: url(../img/advantage-clock@2x.png);
+    background-image: url("../img/advantage-clock@2x.png");
     background-size: 60px auto;
-  }
-}
-
-.advantages__item br {
-  display: none;
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__item br {
-    display: block;
   }
 }
