--- a/source/sass/blocks/btn-list.scss
+++ b/source/sass/blocks/btn-list.scss
@@ -44,18 +44,22 @@
     justify-content: space-between;
     align-items: center;
   }
+
   .btn-list__button {
     font-size: 20px;
     border-bottom: 1px dotted rgb(190, 190, 190);
     padding-bottom: 6px;
   }
+
   .btn-list__button:focus,
   .btn-list__button:hover {
     border-bottom: 1px solid rgb(152, 152, 152);
   }
+
   .btn-list__button:active {
     border-bottom: none;
   }
+
   .btn-list__scale {
     width: 428px;
     height: 6px;
@@ -63,11 +67,13 @@
     border: 0;
     margin-top: -5px;
   }
+
   .btn-list__bar {
     background-color: transparent;
     height: 34px;
     width: 50%;
   }
+
   .btn-list__bar::after,
   .btn-list__bar::before {
     content: "";
@@ -75,6 +81,7 @@
     border-radius: 50%;
     cursor: pointer;
   }
+
   .btn-list__bar::before {
     z-index: 2;
     width: 8px;
@@ -83,6 +90,7 @@
     right: -5px;
     top: -4px;
   }
+
   .btn-list__bar::after {
     top: -18px;
     right: -18px;
@@ -93,10 +101,12 @@
     background-color: rgb(255, 255, 255);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
   }
+
   .btn-list__bar:focus::after,
   .btn-list__bar:hover::after {
-    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .25);
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.25);
   }
+
   .btn-list__bar:active::after {
     border: 2px solid $base-color;
   }
@@ -107,6 +117,7 @@
     margin-left: 86px;
     margin-top: 490px;
   }
+
   .btn-list__button--after {
     margin-left: 7px;
   }
