--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -13,7 +13,6 @@
 }
 
 
-
 .copyright__link {
   font-family: "Arial", sans-serif;
   font-size: 16px;
@@ -23,7 +22,7 @@
 
 @media (min-width: $tablet-width) {
   .copyright__link {
-    width: 124px
+    width: 124px;
   }
 }
 
