--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -1,15 +1,14 @@
 .gift {
   background-color: $base-color;
-  background-image: url(../img/gift-photo-mobile@1x.jpg);
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   width: 280px;
   min-height: 225px;
   padding-top: 65px;
 }
 
-@media (min-resolution: $retina-dpi),
-(min-resolution: $retina-dppx) {
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .gift {
-    background-image: url(../img/gift-photo-mobile@2x.jpg);
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
     background-size: 280px auto;
   }
 }
@@ -18,18 +17,18 @@
   .gift {
     box-sizing: border-box;
     width: 100%;
-    min-height: 201px;
+    min-height: 200px;
     display: flex;
     padding: 0 90px;
     align-items: center;
-    background-image: url(../img/gift-photo-tablet@1x.jpg);
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
   }
 }
 
 @media (min-width: $tablet-width) and (min-resolution: $retina-dpi),
-(min-width: $tablet-width) and (min-resolution: $retina-dppx) {
+  (min-width: $tablet-width) and (min-resolution: $retina-dppx) {
   .gift {
-    background-image: url(../img/gift-photo-tablet@2x.jpg);
+    background-image: url("../img/gift-photo-tablet@2x.jpg");
     background-size: 708px auto;
   }
 }
@@ -39,15 +38,15 @@
     flex-direction: column;
     width: 245px;
     box-sizing: border-box;
-    padding: 73px 40px 20px 37px;
-    background-image: url(../img/gift-photo-desktop@1x.jpg);
+    padding-top: 65px;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 }
 
 @media (min-width: $desktop-width) and (min-resolution: $retina-dpi),
-(min-width: $desktop-width) and (min-resolution: $retina-dppx) {
+  (min-width: $desktop-width) and (min-resolution: $retina-dppx) {
   .gift {
-    background-image: url(../img/gift-photo-desktop@2x.jpg);
+    background-image: url("../img/gift-photo-desktop@2x.jpg");
     background-size: 245px auto;
   }
 }
@@ -59,7 +58,7 @@
 
 @media (min-width: $tablet-width) {
   .gift__img {
-    margin: -12px auto 0 0;
+    margin: 0 auto 0 0;
   }
 }
 
@@ -81,7 +80,7 @@
 
 @media (min-width: $tablet-width) {
   .gift__content {
-    margin: 0 0 0 auto;
+    margin: 0;
     text-align: left;
     padding-right: 24px;
   }
