--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,7 +3,6 @@
 }
 
 .page-header__container {
-  padding: 0 20px;
   margin: 0 auto;
   width: 320px;
   box-sizing: border-box;
@@ -33,6 +32,7 @@
   height: 66px;
   display: block;
   margin: 0;
+  padding-left: 20px;
 }
 
 @media (min-width: $tablet-width) {
@@ -64,7 +64,7 @@
 }
 
 .page-header__nav {
-  display: none;
+  display: block;
 }
 
 @media (min-width: $tablet-width) {
@@ -98,7 +98,7 @@
 @media (min-width: $desktop-width) {
   .page-header--index::before {
     content: "";
-    background: url(../img/index-background-desktop@1x.jpg) no-repeat;
+    background: url("../img/index-background-desktop@1x.jpg") no-repeat;
     background-color: rgb(100, 168, 59);
     height: 696px;
     position: absolute;
@@ -112,9 +112,9 @@
 }
 
 @media (min-width: $desktop-width) and (min-resolution: $retina-dpi),
-(min-width: $desktop-width) and (min-resolution: $retina-dppx) {
+  (min-width: $desktop-width) and (min-resolution: $retina-dppx) {
   .page-header--index::before {
-    background: url(../img/index-background-desktop@2x.jpg);
+    background: url("../img/index-background-desktop@2x.jpg");
     background-size: auto 697px;
   }
 }
