--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -9,7 +9,7 @@
 @media (min-width: $tablet-width) {
   .programs {
     padding: 0 30px;
-    margin-bottom: 22px;
+    margin-bottom: 18px;
     width: 768px;
   }
 }
@@ -45,7 +45,7 @@
 
 @media (min-width: $tablet-width) {
   .programs__item {
-    margin-bottom: 29px;
+    margin-bottom: 25px;
   }
 }
 
@@ -53,7 +53,6 @@
 @media (min-width: $desktop-width) {
   .programs__item {
     width: 570px;
-    padding-bottom: 62px;
-    padding: 76px 50px 0;
+    padding: 76px 50px 62px;
   }
 }
