--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,13 +4,13 @@
 }
 
 .promo {
-  background: url(../img/index-background-mobile@1x.jpg) no-repeat top;
+  background: url("../img/index-background-mobile@1x.jpg") no-repeat top;
 }
 
 @media (min-resolution: $retina-dpi),
-(min-resolution: $retina-dppx) {
+  (min-resolution: $retina-dppx) {
   .promo {
-    background: url(../img/index-background-mobile@2x.jpg) no-repeat top;
+    background: url("../img/index-background-mobile@2x.jpg") no-repeat top;
     background-size: auto 305px;
   }
 }
@@ -72,7 +72,6 @@
   .promo__wrapper {
     min-height: 490px;
     padding: 48px 0 0 28px;
-    width: 50%;
     width: 1300px;
   }
 }
@@ -99,7 +98,7 @@
 @media (min-width: $desktop-width) {
   .promo__title {
     width: 420px;
-    padding: 0px 90px 5px;
+    padding: 0 90px 5px;
   }
 }
 
