--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -16,7 +16,14 @@
 
 @media (min-width: $desktop-width) {
   .main-menu {
-    min-width: 480px;
+    width: 900px;
+    justify-content: flex-end;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-menu__item {
+    margin-left: 35px;
   }
 }
 
