--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,6 @@
 .social {
   padding: 24px 0 15px;
-  min-width: 280px;
+  width: 280px;
   border-top: 1px solid rgb(217, 217, 217);
   border-bottom: 1px solid rgb(217, 217, 217);
 }
@@ -14,11 +14,11 @@
 
 .social__list {
   list-style: none;
+  width: 100%;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  width: 130px;
+  justify-content: center;
   margin: 0 auto;
 }
 
